[package]
name = "quadratic-rust-shared"
version = "0.6.14"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.4"
arrow = "54.2.1"
arrow-array = "54.2.1"
async-trait = "0.1.80"
aws-config = { version = "1.1.1", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1.12.0", features = ["behavior-version-latest", "rt-tokio"] }
bigdecimal = "0.4.5" # need this fixed to the sqlx dependency
bytes = "1.6.0"
cbc = { version = "0.1.2", features = ["alloc"] }
chrono = "0.4.31"
criterion = { version = "0.5", optional = true }
futures-util = "0.3.30"
hex = "0.4.3"
httpmock = { git = "https://github.com/quadratichq/httpmock", version = "0.8.0-alpha.1", features = [
  "proxy",
  "record",
], optional = true }
jsonwebtoken = "9.2.0"
parquet = { version = "54.2.1", default-features = false, features = ["arrow", "arrow-array", "flate2", "snap"] }
redis = { version = "0.29.1", features = ["tokio-comp"] }
reqwest = { version = "0.11.22", features = ["json", "serde_json"] }
rust_decimal = "1.30.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
snowflake-api = { git = "https://github.com/quadratichq/snowflake-rs", branch = "main" }
sqlx = { version = "0.8.2", features = [
  "chrono",
  "uuid",
  "mysql",
  "postgres",
  "bigdecimal",
  "json",
  "runtime-tokio-native-tls",
] }
strum = "0.27.1"
strum_macros = "0.27.1"
tabled = { version = "0.14.0", features = ["color"], optional = true }
thiserror = "2.0.12"
tiberius = { version = "0.12.3", features = ["bigdecimal", "chrono", "time", "tds73", "rust_decimal"] }
tokio = { version = "1.44.2", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["compat"] }
tracing = "0.1.40"
uuid = { version = "1.6.1", features = ["serde", "v4"] }

[features]
default = []
record-request-mock = []
test = ["httpmock", "criterion", "tabled"]

[dev-dependencies]
arrow = { version = "54.2.1", features = ["prettyprint"] }
aws-smithy-async = { version = "1.2.1", features = ["test-util"] }
aws-smithy-runtime = {version = "1.6.2", features = ["test-util"] }
aws-smithy-runtime-api = "1.7.1"
criterion = { version = "0.5" }
http = "1.1.0"
httpmock = { git = "https://github.com/quadratichq/httpmock", version = "0.8.0-alpha.1", features = [
  "proxy",
  "record",
] }
tabled = { version = "0.14.0", features = ["color"] }
tracing-test = "0.2.4"
