[package]
name = "quadratic-rust-shared"
version = "0.24.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = { version = "0.8.4", optional = true }
rand_core = { version = "0.6", features = ["getrandom"], optional = true }
arrow = { version = "=54.2.1", features = ["prettyprint"], optional = true }
arrow-array = { version = "54.2.1", optional = true }
arrow-json = { version = "54.2.1", optional = true }
async-trait = "0.1.80"
aws-config = { version = "1.1.1", features = [
  "behavior-version-latest",
], optional = true }
aws-sdk-s3 = { version = "1.12.0", features = [
  "behavior-version-latest",
  "rt-tokio",
], optional = true }
axum = { version = "0.8.1", features = ["ws"], optional = true }
axum-extra = { version = "0.10.0", features = [
  "typed-header",
], optional = true }
axum-macros = { version = "0.5.0", optional = true }
base64 = { version = "0.22.1", optional = true }
bincode = { version = "2.0.1", optional = true, features = ["serde"] }
bigdecimal = "0.4.5" # need this fixed to the sqlx dependency
bollard = { version = "0.19.3", optional = true }
bytes = "1.6.0"
cbc = { version = "0.1.2", features = ["alloc"] }
chrono = { version = "=0.4.39", features = ["serde"] }
criterion = { version = "0.5", optional = true }
datafusion = { version = "46.0.0", optional = true }
dotenv = { version = "0.15.0", optional = true }
futures = { version = "0.3.29", optional = true }
futures-channel = { version = "0.3.28", optional = true }
futures-util = "0.3.30"
google-analyticsdata1_beta = { version = "6.0.0", optional = true }
google-cloud-bigquery = { version = "0.5.0", optional = true }
headers = { version = "0.4.0", optional = true }
hex = "0.4.3"
http = { version = "1.1.0", optional = true }
httpclient = { version = "0.21.3", optional = true }
hyper = { version = "1.5.2", optional = true }
hyper-rustls = { version = "0.27.5", optional = true }
hyper-util = { version = "0.1.10", features = ["client", "client-legacy", "http1", "http2", "tokio"], optional = true }
httpmock = { git = "https://github.com/quadratichq/httpmock", version = "0.8.0-alpha.1", features = [
  "https",
  "proxy",
  "record",
], optional = true }
intrinio-rs = { version = "0.1.3", optional = true }
jsonwebtoken = { version = "9.2.0", optional = true }
object_store = { version = "0.11.2", default-features = false, features = ["aws"], optional = true }
parquet = { version = "54.2.1", default-features = false, features = [
  "arrow",
  "arrow-array",
  "flate2",
  "snap",
], optional = true }
plaid = { version = "9.0.1", optional = true }
prost = { version = "0.13.5", optional = true, default-features = false }
prost-reflect = { version = "0.15.1", optional = true, features = ["derive"] }
rayon = { version = "1.8", optional = true }
prost-types = { version = "0.14.1", optional = true, features = ["chrono"] }
redis = { version = "0.29.1", features = ["tokio-comp"], optional = true }
reqwest = { version = "0.11.22", features = [
  "json",
  "serde_json",
  "stream",
], optional = true }
russh = { version = "0.54.1", optional = true }
russh-config = { version = "0.54.0", optional = true }
rustls = { version = "0.23.31", features = ["ring"], optional = true }
rust_decimal = "1.30.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = { version = "1.0.108", features = ["preserve_order"] }
snowflake-api = { git = "https://github.com/quadratichq/snowflake-rs", branch = "main", optional = true }
sqlx = { version = "0.8.6", default-features = false, features = [
  "chrono",
  "uuid",
  "mysql",
  "postgres",
  "rust_decimal",
  "json",
  "runtime-tokio-native-tls",
], optional = true }
strum = "0.27.1"
strum_macros = "0.27.1"
tabled = { version = "0.14.0", features = ["color"], optional = true }
thiserror = "2.0.12"
tiberius = { version = "0.12.3", default-features = false, features = [
  "bigdecimal",
  "chrono",
  "time",
  "tds73",
  "rust_decimal",
], optional = true }
tokio = { version = "1.44.2", features = ["full"], optional = true }
tokio-stream = { version = "0.1.17", optional = true }
tokio-util = { version = "0.7.11", features = ["compat"], optional = true }
tokio-tungstenite = { version = "0.26", optional = true, features = ["native-tls"] }
tracing = { version = "0.1.40" }
uuid = { version = "1.6.1", features = ["serde", "v4"] }
url = { version = "2.4.0", features = ["serde"], optional = true }
urlencoding = { version = "2.1.3", optional = true }
yup-oauth2 = { version = "11.0.0", optional = true }
derivative = "2.2.0"

[features]
default = []
arrow = ["dep:arrow", "arrow-array", "object_store", "parquet"]
auth = ["http", "jsonwebtoken", "tokio", "reqwest"]
aws = ["aws-sdk-s3", "aws-config"]
cache = ["memory", "tokio"]
crypto = ["aes", "rand_core"]
docker = ["bollard", "tokio"]
environment = []
intrinio = ["intrinio-rs"]
memory = []
multiplayer = ["base64"]
net = [
  "auth",
  "axum",
  "axum-extra",
  "axum-macros",
  "dotenv",
  "futures",
  "futures-channel",
  "headers",
  "jsonwebtoken",
  "multiplayer",
  "protobuf",
  "russh",
  "russh-config",
  "tokio",
  "tokio-tungstenite",
  "tokio-util",
  "url",
]
protobuf = ["prost", "prost/derive", "prost-reflect"]
pubsub = ["reqwest", "redis"]
quadratic-api = ["bincode", "reqwest", "urlencoding"]
quadratic-cloud = ["base64", "bincode", "quadratic-api"]
quadratic-database = ["sqlx"]
record-request-mock = []
sql = [
  "arrow",
  "cache",
  "datafusion",
  "dotenv",
  "httpmock",
  "net",
  "quadratic-api",
  "google-cloud-bigquery",
  "object_store",
  "parquet",
  "snowflake-api",
  "sqlx",
  "tiberius",
  "tokio",
  "tokio-util",
]
storage = ["aws", "crypto", "tokio"]
synced = [
  "arrow",
  "arrow-json",
  "base64",
  "dotenv",
  "environment",
  "google-analyticsdata1_beta",
  "httpclient",
  "httpmock",
  "hyper-rustls",
  "hyper-util",
  "parquet",
  "plaid",
  "rayon",
  "reqwest",
  "rustls",
  "tokio",
  "tokio-stream",
  "url",
  "yup-oauth2"
]
benchmark = ["criterion", "tabled"]
test = ["httpmock", "criterion", "tabled"]

[dev-dependencies]
arrow = { version = "54.2.1", features = ["prettyprint"] }
aws-smithy-async = { version = "1.2.1", features = ["test-util"] }
aws-smithy-runtime = { version = "1.6.2", features = ["test-util"] }
aws-smithy-runtime-api = "1.7.1"
criterion = { version = "0.5" }
http = "1.1.0"
tabled = { version = "0.14.0", features = ["color"] }
tempfile = "3.8"
tracing = "0.1.40"
tracing-test = "0.2.4"

[build-dependencies]
prost-build = "0.13.5"
prost-reflect = "0.15.1"
prost-reflect-build = "0.15.1"
prost-types = "0.14.1"
