[package]
name = "rust-shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quadratic-core = { path = "../quadratic-core" }
tabled = { version ="0.14.0", features = ["color"] }

[dev-dependencies]