[package]
name = "quadratic-renderer-core"
version = "0.1.0"
edition = "2021"
description = "Platform-agnostic rendering and layout core for Quadratic"

[features]
default = []
# Enable wgpu backend (used by renderer-wasm WebGPU mode and native)
wgpu = ["dep:wgpu"]

[dependencies]
# Quadratic shared types (no wasm features)
quadratic-core-shared = { path = "../../quadratic-core-shared", default-features = false }

# wgpu for GPU rendering (optional - enabled by renderer-wasm and native)
wgpu = { version = "23.0", optional = true, default-features = false, features = ["wgsl"] }

# XML parsing for BMFont files
quick-xml = "0.37"

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = { version = "2.0.0", features = ["serde"] }
serde_json = "1.0"

# Math
glam = "0.30"
bytemuck = { version = "1.16", features = ["derive"] }

# Utilities
log = "0.4"
anyhow = "1.0"
thiserror = "2.0"
