[package]
name = "quadratic-rust-renderer-shared"
version = "0.1.0"
edition = "2021"
description = "Shared types for layout and render workers"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = { version = "2.0.0", features = ["serde"] }
log = "0.4"

# WASM bindings (optional - for console_logger)
wasm-bindgen = { version = "0.2", optional = true }

[features]
default = []
wasm = ["wasm-bindgen"]
