[package]
name = "quadratic-rust-layout"
version = "0.1.0"
edition = "2021"
description = "Layout worker for Quadratic spreadsheet - handles text layout, hash management, and vertex buffer generation"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["wasm"]
wasm = [
    "wasm-bindgen",
    "js-sys",
    "web-sys",
    "console_error_panic_hook",
    "quadratic-core-shared/js",
]

[dependencies]
# Workspace crates
quadratic-core-shared = { path = "../../../quadratic-core-shared", default-features = false }

# Core library (shared types for layout/render worker communication)
quadratic-renderer-core = { path = "../../core", features = ["js"] }

# WASM bindings (optional)
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true, features = [
    "console",
] }
console_error_panic_hook = { version = "0.1", optional = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = { version = "2.0.0", features = ["serde"] }

# Utilities
log = "0.4"

# Required for WASM support (used by uuid in quadratic-core-shared)
getrandom = { version = "0.3", features = ["wasm_js"] }

[dev-dependencies]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4"]
