[package]
name = "quadratic-rust-renderer"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Rust renderer for Quadratic - supports both WASM (browser worker) and native (cloud) targets"
repository.workspace = true
license-file.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "quadratic-renderer"
path = "src/bin/render.rs"
required-features = ["native"]

[features]
default = ["wasm"]

# JS interop dependencies (shared between wasm targets)
# Used for SharedArrayBuffer, ViewportBuffer, etc.
js = [
    "wasm-bindgen",
    "js-sys",
    "web-sys",
    "quadratic-core-shared/js",
]

# WASM/browser target - supports WebGPU (preferred) with WebGL2 fallback
# Runtime detection chooses the best available backend
wasm = [
    "js",
    "wasm-bindgen-futures",
    "console_error_panic_hook",
    "wgpu-wasm",
    "image",
]

# Native target - supports wgpu with native backends + software fallback
native = [
    "tiny-skia",
    "env_logger",
    "image",
    "wgpu-native",
]

# wgpu for WASM - WebGPU with WebGL2 fallback (via wgpu abstraction)
# webgpu: Modern WebGPU API (Chrome 113+, Firefox 127+, Safari 18+)
# webgl: WebGL2 fallback for older browsers
wgpu-wasm = ["wgpu/webgpu", "wgpu/webgl", "wgpu/wgsl"]

# wgpu for native platforms (Vulkan, Metal, DX12 backends)
# vulkan-portability enables MoltenVK on macOS and other portability layers
wgpu-native = ["wgpu/vulkan-portability", "wgpu/metal", "wgpu/dx12", "wgpu/wgsl"]

[dependencies]
# WASM-only dependencies
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }

# Web APIs (WASM only) - WebGL2 for rendering
# WebGPU detection uses js-sys::Reflect instead of typed web-sys bindings
web-sys = { version = "0.3", optional = true, features = [
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "HtmlImageElement",
    "OffscreenCanvas",
    "OffscreenCanvasRenderingContext2d",
    "Navigator",
    "Performance",
    # WebGL2 features
    "WebGl2RenderingContext",
    "WebGlBuffer",
    "WebGlFramebuffer",
    "WebGlProgram",
    "WebGlShader",
    "WebGlTexture",
    "WebGlUniformLocation",
    "WebGlVertexArrayObject",
    "WebGlContextAttributes",
    # Fetch API for loading emoji textures
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Blob",
    "ImageBitmap",
    "ImageData",
] }

# WebGPU via wgpu crate (cross-platform, stable API)
# This provides WebGPU on web and native via a unified abstraction
# Features are configured via wgpu-wasm and wgpu-native feature flags
# NOTE: v23.0+ has SurfaceTarget::OffscreenCanvas variant (web worker support)
wgpu = { version = "23.0", optional = true, default-features = false }

# Native-only dependencies (software rendering)
tiny-skia = { version = "0.11", optional = true }
env_logger = { version = "0.11", optional = true }

# PNG decoding for emoji spritesheets (used by both wasm and native)
image = { version = "0.25", optional = true, default-features = false, features = ["png"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = { version = "2.0.0", features = ["serde"] }
log = "0.4"

# Quadratic shared types (no wasm-export - rust-renderer has its own wasm bindings)
# Enable js feature when building for wasm to get ViewportBuffer
quadratic-core-shared = { path = "../../../quadratic-core-shared", default-features = false }

# Core library (shared types for layout/render worker communication)
# Enable wgpu-wasm for WebGPU + WebGL2 rendering via wgpu
quadratic-renderer-core = { path = "../../core", features = ["js", "wgpu-wasm"] }

# Required for WASM support (used by uuid in quadratic-core-shared)
getrandom = { version = "0.3", features = ["wasm_js"] }

# Math
glam = "0.30"

# Safe transmuting for GPU buffer uploads
bytemuck = { version = "1.16", features = ["derive"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "z"
lto = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[package.metadata.wasm-pack.profile.release.wasm-bindgen]
debug-js-glue = false
demangle-name-section = true
dwarf-debug-info = false

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
debug-js-glue = true
demangle-name-section = true
dwarf-debug-info = false
